# jetson_nano_bot

arduino_codes/: motor_cotrol_diff_drive_2.ino  tick_counter.ino
localization_data_pub/: CMakeLists.txt  package.xml
localization_data_pub/launch/: localization_data_pub.launch
manual_control_car/: CMakeLists.txt  package.xml
manual_control_car/launch/: manual_control.launch
manual_control_car/src/: manual_control.cpp
navstack_pub/: package.xml
